change SPb e-Learning community site url

--- a/_data/itgm11_communities.yml
+++ b/_data/itgm11_communities.yml
@@ -44,7 +44,7 @@
 
 - title: SPb e-Learning
   id: 12
-  link: "https://www.linkedin.com/groups?home=&gid=8282289"
+  link: "http://spb-elearning.ru/"
 
 - title: SPb SQA Group
   id: 13
