add new sponsor, fix programm, add link to spreadsheet

--- a/_data/itgm11_sponsors.yml
+++ b/_data/itgm11_sponsors.yml
@@ -25,6 +25,11 @@ bronse:
     link: https://sprintbox.ru/
     logo: img/partners/sprintbox.jpg
 
+  - title: Filanco
+    link: http://www.filanco.ru/
+    logo: img/partners/filanco.png
+
+
 infopartners:
   # - title: LoftBlog
   #   link: https://loftblog.ru
