add Atlassian User Group

--- a/_data/itgm11_communities.yml
+++ b/_data/itgm11_communities.yml
@@ -82,6 +82,11 @@
   id: 17
   link: /itgm10
 
+- title: Atlassian User Group
+  id: 18
+  link: "http://meetup.com/augspb"
+
+
 # - title: IT talk
 #   id: 3
 #   link: http://it-talk.dataart.ru/
