--- a/_data/itgm11_program.yml
+++ b/_data/itgm11_program.yml
@@ -56,7 +56,7 @@
         -
           time: "16.00-16.45"
           speaker: "Ведущий: Дмитрий Назаров (EXANTE)\n\nУчастники:\nСтепан Заступов (Voice Labs ltd),\nАндрей Мелихов (Яндекс.Деньги),\nРоман Тимофеев (ХКФ Банк),\nСергей Матвеенко (Advance)"
-          company: "см. поле Спикер, там всё указано"
+          company: ""
           subject: "ДЕБАТЫ\n\n\"JavaScript на сервере: норма или смертный грех?\""
           description: null
           photo: null
